examples/errors/imported_item_not_found.aaa
from "../fizzbuzz" import foo

fn main begin nop end
